# indoor-cycling-hud

./: .gitignore  BACKLOG.md  CMakeLists.txt  CMakePresets.json  README.md  USEFUL_LINKS.md  release.ps1  requirements.txt  vcpkg.json
bluetooth/: CMakeLists.txt
bluetooth/include/: BleClient.h  BleClientEvent.h  BleConstants.h  BluetoothConstants.h  Channel.h  Data.h  DeviceRegistry.h  Events.h  Formula.h  Model.h  ModelEvents.h  NotificationService.h  Scanner.h  ScannerService.h  Service.h  Stats.h  WinRT.h  WinRtUtils.h
bluetooth/src/: BleClient.cpp  Data.cpp  DeviceRegistry.cpp  Model.cpp  NotificationService.cpp  Scanner.cpp  ScannerService.cpp  WinRT.cpp
hud/: __init__.py  app.py
hud/coms/: channels.py
hud/configuration/: config.py
hud/controller/: controller.py
hud/model/: __init__.py  data_classes.py  events.py  model.py  statistics.py
hud/service/: data_management_service.py  device_registry.py
hud/service/ble/: base_ble_connection_service.py  ble_client.py  cycling_speed_cadence_service.py  fec_bike_trainer_service.py  heart_rate_service.py  power_meter_service.py  scanner.py
hud/view/: __init__.py  app_state.py  device_dialog.py  navigator.py  system_tray.py
hud/view/device/: select_device_panel.py  sensor_window.py  trainer_window.py
hud/view/primitives/: draggable_window.py  labels.py  theme_switch.py
hud/view/workout/: metrics_panel.py  workout_window.py
hud/view/workout_statistics/: workout_statistics_window.py
include/: AppState.h  AppWindow.h  ClickableLabel.h  Constants.h  Controller.h  ControllerHandler.h  DataFields.h  DeviceDialog.h  Events.h  Hud.h  Labels.h  Measurements.h  MetricsPanel.h  QtEventPublisher.h  SelectDevicePanel.h  SensorsWindow.h  StyleSheets.h  SupportedServices.h  SystemTray.h  TrainerWindow.h  ValueLabel.h  ViewNavigator.h  WinRT.h  WorkoutWindow.h
model/: CMakeLists.txt
model/include/: BleDeviceEvents.h  BleDeviceServices.h  Channel.h  ClientRegistry.h  EventBus.h  Formula.h  Model.h  ModelEvents.h  NotificationService.h  Reconnector.h  ScannerService.h  Service.h  Units.h  WheelSizes.h  WorkoutDataStorage.h  sqlite_utils.h
model/src/: DeviceRegistry.cpp  EventBus.cpp  Model.cpp  NotificationService.cpp  Reconnector.cpp  ScannerService.cpp  WorkoutDataStorage.cpp
model/tests/: CMakeLists.txt
model/tests/src/: FormilaTest.cpp  WorkoutDataStorageTest.cpp  simple_read_write_test.cpp
service/: CMakeLists.txt
service/include/: BleDeviceEvents.h  Channel.h  ClientRegistry.h  Formula.h  Model.h  NotificationService.h
service/src/: DeviceRegistry.cpp  Model.cpp  NotificationService.cpp  ScannerService.cpp
src/: AppWindow.cpp  Controller.cpp  DataFields.h  DeviceDialog.cpp  Hud.cpp  Labels.cpp  MetricsPanel.cpp  SelectDevicePanel.cpp  SensorsWindow.cpp  SystemTray.cpp  TrainerWindow.cpp  ViewNavigator.cpp  WinRT.cpp  WorkoutWindow.cpp  main.cpp
view/include/: AppState.h  AppStyleSheets.h  AppWindow.h  Constants.h  Controller.h  ControllerHandler.h  DataFields.h  DeviceDialog.h  DeviceWindow.h  Events.h  Labels.h  MetricsPanel.h  QtEventPublisher.h  ReconnectPacer.h  SelectDevicePanel.h  SelectWorkoutWindow.h  SensorsWindow.h  SettingsManager.h  StyleSheets.h  SupportedServices.h  SystemTray.h  TrainerWindow.h  ViewNavigator.h  WorkoutPacer.h  WorkoutSettings.h  WorkoutSummaryPanel.h  WorkoutSummaryWindow.h  WorkoutWindow.h
view/src/: AppWindow.cpp  Controller.cpp  DeviceDialog.cpp  DeviceWindow.cpp  Hud.cpp  Labels.cpp  Main.cpp  MetricsPanel.cpp  QtEventPublisher.cpp  ReconnectPacer.cpp  SelectDevicePanel.cpp  SelectWorkoutWindow.cpp  SensorsWindow.cpp  SettingsManager.cpp  SystemTray.cpp  TrainerWindow.cpp  ViewNavigator.cpp  WorkoutPacer.cpp  WorkoutSummaryPanel.cpp  WorkoutSummaryWindow.cpp  WorkoutWindow.cpp
view/tests/: FormatTest.cpp
